--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.10",
+    "@types/regression": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
